# football_betting_system

./: .aws_config.sh  .dockerignore  .env.backup  .env.template  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  10_MODEL_SYSTEM_README.md  40_HOUR_MASTER_PLAN.md  ACTION_NETWORK_SCRAPING_GUIDE.md  ACTUAL_SYSTEM_STATUS.md  AGENT_DEPLOYMENT_GUIDE.md  AI_REVIEW_REPORT.md  AUTONOMOUS_AGENT_README.md  AUTO_ANALYZER_README.md  BACKTESTER_IMPROVEMENTS.md  BACKTEST_ANALYSIS.md  BACKTEST_ENHANCEMENTS.md  BACKTEST_ISSUE_EXPLAINED.md  BACKTEST_RESULTS.md  BACKTEST_RESULTS_SUMMARY.md  BACKUP_GUIDE.md  BETTING_ACTION_PLAN_NFL.md  CHATGPT_AGENT_PROMPTS.md  COLLEGE_SYSTEMS_ANALYSIS.md  COMPLETE_BETTING_SYSTEM_OVERVIEW.md  COMPLETE_NFL_SYSTEM_README.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SYSTEM_INTEGRATION_GUIDE.md  COMPLETE_WORKFLOW_INTEGRATION_GUIDE.md  COMPREHENSIVE_TRAINING_GUIDE.md  CONFIGURATION_COMPLETE.md  CONTINUOUS_MONITORING_GUIDE.md  CONTRARIAN_INTEGRATION_README.md  COPILOT_INTEGRATION_PROMPT.md  CRAWLBASE_INTEGRATION.md  CREW_INTEGRATION_GUIDE.md  CREW_SYSTEM_SUMMARY.md  DAILY_PREDICTION_GUIDE.md  (+780 more)
.cache/: app_cache.json  odds_history.json  predictions_history.json
.claude/hooks/: tool-use-ncaa-bet-validation.sh  user-prompt-submit-ncaa-context.sh
.cursor/: mcp.json
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: football_optimization_prd.txt  prd.txt  smart_system_prd.txt
.taskmaster/tasks/: tasks.json
.windsurf/: mcp.json
analysis/: contrarian_analysis_PHI_at_GB.json
analysis_engine/: referee_analyzer.py
aws_deploy/: lambda-s3-policy.json
aws_deploy/package/: lambda_backtest_analyzer.py  lambda_odds_collector.py
backtest_results/: trap_backtest_2024.json
backtesting/: __init__.py  referee_backtest.py
college_football_system/: .env.example  AWS_DEPLOYMENT.md  Dockerfile  Dockerfile.lambda  README.md  README_NCAA_UPGRADES.md  WORLD_MODELS_GUIDE.md  __init__.py  backtester.py  deploy_aws.sh  deploy_ncaa_container.sh  deploy_ncaa_lambda.sh  fetch_historical_ncaa_games.py  game_prioritization.py  gold_standard_ncaaf_config.py  lambda_handler.py  lambda_handler_simple.py  main_analyzer.py  ncaa_injury_tracker.py  ncaa_live_data_fetcher.py  parlay_optimizer.py  realtime_monitor.py  requirements.txt  response.json  social_weather_analyzer.py  zephyr_integration.py
college_football_system/causal_discovery/: ncaa_causal_learner.py
college_football_system/core/: interaction_world_model.py
config/: __init__.py  betting_config.py
core/: __init__.py  game_fetcher.py  model_ensemble.py
data/: backtest_bet_log.json  backtest_performance_log.json  bet_log.json  blackout_cache.sqlite  clv_history.json  defense_vs_position_stats.json  feedback.sqlite  learned_interactions.json  learning_system.db  line_shopping_history.json  market_intelligence.db  meta_learner.sqlite  nfl_live_tracking.db  nfl_training_data.json  prop_backtest_data.json  prop_training_data.json  referee_cache.json  referee_training_features.csv  referee_training_features.json  system_state.json  team_referee_pairings.json  trap_analysis_BAL_at_PIT.json  travel_rest_analysis.db
data/agents/: coach_agents.csv  coordinator_agents.csv  ownership_broadcast.csv  player_agents.csv  ref_agent_conflicts.csv
data/analysis_output/: referee_bias_analysis_v2.json
data/backtests/: backtest_quick_wins_20251114_152352.json  day_of_week_edge_analysis.csv
data/historical/: collection_summary.json  game_results_2022_2024.json
data/historical_games/: aggregation_report.json  (+1 more)
data_loaders/: __init__.py  historical_data_loader.py
docs/: PRD.text  colab_gpu_gui_usage.md
logs/: gui.out  nfl_live_tracking.out  nfl_live_tracking.pid
models/: contrarian_nfl_model.pkl  ensemble_config.json  home_advantage_nfl_model.pkl  moneyline_ensemble.pkl  nfl_features.json  prop_model.json  spread_ensemble.pkl  spread_expert_nfl_model.pkl  total_ensemble.pkl  total_expert_nfl_model.pkl  training_metrics.json
ncaa_agents/: __init__.py  analyzer.py  data_collector.py  predictor.py  super_intelligence_predictor.py  tracker.py
ncaa_models/: feature_engineering.py  officiating_bias_model.py  prop_bet_model.py  super_intelligence.py
nfl_system/: backtester.py  backtester_improved.py  game_prioritization.py  gold_standard_nfl_config.py  parlay_optimizer.py  zephyr_integration.py
performance_analysis/: integrated_analysis_20250919_211855.json  summary_report_20250919_211855.txt
performance_data/: session_20250909_215648.json  session_20251018_174954.json  session_20251018_180304.json  session_20251018_180848.json  session_20251019_160749.json  session_20251019_161754.json  session_20251019_164216.json
reporting/: daily_reporter.py
reports/: WEEK10_TRACKING.md  confidence_calibration.json  ncaa_12_models_calibration.json  nfl_confidence_calibration.json  week10_game_edges.txt  week10_high_roi_props.txt  week10_prop_edges.txt  week_11_master_report.txt  week_11_results.json
scripts/: deploy_unified_council.sh  find_api_keys.py  parlay_auto.py  parlay_cli.py  run-from-root.sh  run_daily_report.py
test_results/: fake_money_test_ncaaf_20250909_215400.json  fake_money_test_nfl_20250909_215348.json  fake_money_test_nfl_20250912_192259.json
tests/: test_cfb_agent_metrics_smoke.py  test_enhanced_backtest.py  test_referee_bias_knowledge_base.py  test_referee_style_analysis.py  test_simple_narrative_scraper.py  test_simulator.py  test_unified_betting.py
wnba_repo/: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  __init__.py  game_prioritization.py  init.sh  realtime_monitor.py  requirements.txt  run.py  setup.py  wnba_config.py
wnba_system/: main_analyzer.py  parlay_optimizer.py  social_weather_analyzer.py
womens_college_basketball_repo/: .env.example  AI_PROOF_ARCHITECTURE.md  INSTALL.md  LICENSE  __init__.py  game_prioritization.py  init.sh  main_analyzer.py  parlay_optimizer.py  realtime_monitor.py  requirements.txt  run.py  setup.py  wcbb_ai_proof_config.py  wcbb_config.py
womens_college_basketball_system/: README.md  social_weather_analyzer.py
(+244 files in other folders)
