[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-betting-system"
version = "1.0.0"
description = "Advanced football betting system with AI analysis, risk management, and real-time predictions"
authors = [{name = "Ryan", email = "ryan@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["football", "betting", "ai", "sports", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "scikit-learn>=1.3.2",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.2",
    "redis>=5.0.1",
    "aiocache>=0.12.2",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "selenium>=4.15.2",
    "schedule>=1.2.0",
    "pytz>=2023.3",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.2",
    "dash>=2.14.2",
    "websockets>=12.0",
    "celery>=5.3.4",
    "flower>=2.0.1",
    "prometheus-client>=0.19.0",
    "openai>=1.3.7",
    "anthropic>=0.7.8",
    "google-generativeai>=0.3.2",
    "huggingface-hub>=0.19.4",
    "datasets>=2.15.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.3",
    "optimum>=1.16.0",
    "vllm>=0.2.6",
    "text-generation-inference>=1.4.0",
    "mlflow>=2.8.1",
    "wandb>=0.16.1",
    "optuna>=3.4.0",
    "xgboost>=2.0.2",
    "lightgbm>=4.1.0",
    "catboost>=1.2.2",
    "networkx>=3.2.1",
    "scipy>=1.11.4",
    "statsmodels>=0.14.0",
    "prophet>=1.1.5",
    "shap>=0.44.0",
    "lime>=0.2.0.1",
    "dowhy>=0.11.1",
    "causal-ml>=0.15.1",
    "pymc>=5.10.0",
    "cvxpy>=1.4.1",
    "yfinance>=0.2.28",
    "alpha-vantage>=2.3.1",
    "tweepy>=4.14.0",
    "textblob>=0.17.1",
    "vaderSentiment>=3.3.2",
    "newspaper3k>=0.2.8",
    "feedparser>=6.0.10",
    "apscheduler>=3.10.4",
    "dramatiq>=1.15.0",
    "rq>=1.15.1",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "configparser>=6.0.0",
    "keyring>=24.3.0",
    "cryptography>=41.0.7",
    "bcrypt>=4.1.2",
    "jwt>=1.3.1",
    "authlib>=1.2.1",
    "itsdangerous>=2.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "coverage>=7.3.2",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.9",
    "ipykernel>=6.27.1",
    "ipywidgets>=8.1.1",
    "notebook>=7.0.6",
    "nbconvert>=7.12.0",
    "nbformat>=5.9.2",
]

gpu = [
    "torch[cuda]>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "tensorflow-gpu>=2.15.0",
    "cupy-cuda12x>=12.3.0",
    "nvidia-ml-py>=12.535.108",
    "pynvml>=11.5.0",
]

[project.urls]
Homepage = "https://github.com/ryan/football-betting-system"
Repository = "https://github.com/ryan/football-betting-system"
Documentation = "https://ryan.github.io/football-betting-system"
"Bug Tracker" = "https://github.com/ryan/football-betting-system/issues"

[project.scripts]
football-betting = "football_betting_system.main:main"
setup-env = "environment_setup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["football_betting_system*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "torch.*",
    "transformers.*",
    "mlflow.*",
    "wandb.*",
    "optuna.*",
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "shap.*",
    "lime.*",
    "dowhy.*",
    "pymc.*",
    "cvxpy.*",
    "yfinance.*",
    "tweepy.*",
    "newspaper.*",
    "feedparser.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that require API access",
    "gpu: marks tests that require GPU",
    "asyncio: marks coroutine tests using pytest-asyncio",
]

[tool.coverage.run]
source = ["football_betting_system"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["football_betting_system"]
known_third_party = ["pandas", "numpy", "sklearn", "torch", "transformers"]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B601"]
